@@ -2,15 +2,15 @@ Main files
 ==========
 
 Camilla Berglund <elmindreda@users.sourceforge.net> wrote the first
-version of duff, and is currently the main author.
+version of duff and is currently its main developer.
 
 Duff contains and uses the SHA1 message digest code from the sha-asaddi
 package, which was written by Allan Saddi <allan@saddi.com>.  See the
 files `sha1.c' or `sha1.h' for copyright and license details.
 
-Ideas, suggestions, spelling corrections and bug reports have been
-contributed by various people, and they are noted in the appropriate
-entries of the `ChangeLog' file.
+Ideas, suggestions, initial feature patches, spelling corrections and bug
+reports have been contributed by various people.  They are noted in the
+appropriate entries of the `ChangeLog' file.
 
 
 Supporting files
