@@ -15,6 +15,10 @@ Cluster n.
 Directory n.
   A physical directory (inode, not link) which has been searched for entries.
 
+Invalid a.
+  An entry becomes invalid if any stage of data gathering failed on it.  An
+  invalid entry should not be modified or operated upon.
+
 
 Important files
 ===============
