@@ -64,6 +64,11 @@ magic should be required.  If it is, then that's a bug and should be reported.
 
 This release of duff has been successfully built on the following systems:
 
+  Debian Etch x86
+  Debian Etch powerpc
+
+Earlier releases have been successfully built on the following systems:
+
   Arch Linux x86
   Darwin 7.9.0 powerpc
   Debian Etch powerpc
@@ -74,16 +79,6 @@ This release of duff has been successfully built on the following systems:
   Red Hat Enterprise 4.0 x86
   SunOS 5.9 sparc64
   Ubuntu Breezy x86
-
-Earlier releases have been successfully built on the following systems:
-
-  Arch Linux x86
-  Darwin 7.9.0 powerpc
-  Debian Etch powerpc
-  Debian Sarge alpha
-  FreeBSD 4.11 x86
-  FreeBSD 5.4 x86
-  SunOS 5.9 sparc64
 
 The tools used were gcc and GNU or BSD make.  However, it should build on most
 Unix systems without modifications.
