@@ -2,7 +2,7 @@
 .\" This document is licensed under the zlib/libpng license.
 .\" Please see the file `COPYING' for license details.
 .\"
-.Dd September 29, 2006
+.Dd November 7, 2006
 .Os
 .Dt DUFF 1
 .Sh NAME
@@ -140,6 +140,7 @@ The command:
 .Dl duff -e * \&| xargs rm
 .Pp
 removes all duplicate files in the current directory.
+Note that it's usually a good idea to check what will be removed before running a command like the one above.
 .Pp
 The command:
 .Dl duff -r foo/
